[gd_scene load_steps=14 format=3 uid="uid://bsqs0t408mdv7"]

[ext_resource type="Script" uid="uid://caa1ecai7ymmi" path="res://scenes/game_object/player/player.gd" id="1_1kbk7"]
[ext_resource type="PackedScene" uid="uid://cypxhbxv6dqlt" path="res://scenes/component/health_component.tscn" id="2_7bdub"]
[ext_resource type="PackedScene" uid="uid://o15gfwgrbunk" path="res://scenes/ability/sword_ability_controller/sword_abillity_controller.tscn" id="3_gqjuk"]
[ext_resource type="Texture2D" uid="uid://bilcpwcgisvsr" path="res://scenes/game_object/player/maodie.png" id="4_7bdub"]

[sub_resource type="Animation" id="Animation_ajpx6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_w2dk2"]
resource_name = "idle"
length = 0.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.94, 1.06), Vector2(1, 1), Vector2(1.06, 0.94)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("Visuals:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_7bdub"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.4, 0.55, 0.7),
"transitions": PackedFloat32Array(0.5, 1.23114, 2, 0.5, 1.23114, 2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3), Vector2(0, 0), Vector2(0, 0), Vector2(0, -3), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4, 0.5, 0.7),
"transitions": PackedFloat32Array(0.5, 1, 1, 0.5, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0, 0.0, 0.174533, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.35, 0.4, 0.6, 0.75),
"transitions": PackedFloat32Array(0.5, 1.56917, 1.8025, 0.5, 1.56917, 1.8025),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.94, 1.06), Vector2(1.1, 0.9), Vector2(1, 1), Vector2(0.94, 1.06), Vector2(1.1, 0.9)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ajpx6"]
_data = {
&"RESET": SubResource("Animation_ajpx6"),
&"idle": SubResource("Animation_w2dk2"),
&"walk": SubResource("Animation_7bdub")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7bdub"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.247059, 0.14902, 0.192157, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.247059, 0.14902, 0.192157, 1)
corner_detail = 1
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ajpx6"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.247059, 0.14902, 0.192157, 1)
anti_aliasing = false
anti_aliasing_size = 0.01

[sub_resource type="CircleShape2D" id="CircleShape2D_jhh24"]
radius = 48.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ajpx6"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cyojo"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_1kbk7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ajpx6")
}

[node name="HealthComponent" parent="." instance=ExtResource("2_7bdub")]

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbillityController" parent="Abilities" instance=ExtResource("3_gqjuk")]

[node name="DamageIntervalTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(24, 4)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -23.0
offset_right = 12.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(12, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_7bdub")
theme_override_styles/fill = SubResource("StyleBoxFlat_ajpx6")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_jhh24")
debug_color = Color(0.169596, 0.516757, 1, 0.42)

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("4_7bdub")
offset = Vector2(0, -8)

[node name="HurtArea2D" type="Area2D" parent="."]
visible = false
position = Vector2(0, -6)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea2D"]
shape = SubResource("CircleShape2D_ajpx6")
debug_color = Color(0.753856, 0.193154, 1, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_cyojo")
